Fix interrupt of debuggee in remote debugging sessions.

This fixes the insertion of breakpoints or stopping the debuggee
when using gdbserver for remote debugging.

NB: Code style adapted by Milian, hope I didn't break anything.

BUG: 350916